welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:42: error: reassignment to val
				i = i + 1
                                  ^SnakeBuggle:48: error: reassignment to val
					i = i + 1
                                          ^