welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {

def fonctionTest():Boolean = {
	if (estFaceMur) {
		if (getDirection() == Direction.EST) {
			gauche()
			if (!estFaceMur) {
				droite()
				return true				
			} else {
				gauche()
				return false
			}			
		} else {
			if (getDirection() == Direction.OUEST) {
				droite()
				if (!estFaceMur) {
					gauche()
					return true
				} else {
					gauche()
					return false					
				}
			} else {
				return false
			}			
		}	
	} else {
		return false
	}
}


for (i <- 0 to getMondeHauteur - 1) {	
		if (!estFaceMur) {
			avance()
		} else { 
			if (getDirection() == Direction.OUEST) {
				droite()
				avance()
				droite()
				i = i + 1
			} else {
				if(getDirection() == Direction.EST) {
					gauche()
					avance()
					gauche()
					i = i + 1
				}
			}
		}	
}	
}

